tests/fixtures/invalid/str_bitor_bool.py
# Cannot bitwise OR Str and Bool
x: str = "hello" | True
